# DP-Odometry-fusion

./: .gitignore  README.md  bp_start_bag.sh  commands.txt  csm_eight.csv  kin_eight_regul.csv  kin_structured_regul.csv  plot_error_over_time.py  plot_trajectory_eval.py  results.csv  run_trajectory_eval.sh  start.sh  temp  trajectory_error.sh  trajectory_eval.py
.github/: copilot-instructions.md
backup_csv_files/: csm_basic.csv  csm_eight.csv  csm_structured.csv  genz_basic.csv  genz_eight.csv  genz_structured.csv  kin_basic.csv  kin_basic_regul.csv  kin_eight.csv  kin_eight_regul.csv  kin_structured.csv  kin_structured_regul.csv  pure_csm_basic.csv  pure_csm_eight.csv  pure_csm_structured.csv
csv_datasets/: csm_basic.csv  csm_structured.csv  genz_basic.csv  genz_eight.csv  genz_structured.csv  kin_basic_regul.csv  kin_sigma.csv  kin_tetragon.csv  pure_csm_basic.csv  pure_csm_eight.csv  pure_csm_structured.csv
csv_files/: genz_lambda.csv  genz_sigma.csv  genz_sigma7.csv  genz_tetragon.csv  kin_lambda.csv
kf_simulation/: package.xml  setup.cfg  setup.py
kf_simulation/kf_simulation/: KFsim.py
recordings/: convert_bag.sh
recordings/ekf_speed/: ekf_speed_0.mcap  metadata.yaml
recordings/fresh_ros2_laser_scan_matcher/: metadata.yaml
recordings/fusion_csm/: metadata.yaml
recordings/icp_degeneracy/: icp_degeneracy_0.mcap  metadata.yaml
recordings/icp_degeneracy_2/: icp_degeneracy_2_0.mcap  metadata.yaml
recordings/icp_degeneracy_pid/: icp_degeneracy_pid_0.mcap  metadata.yaml
recordings/kalman_filter/: kalman_filter_0.mcap  metadata.yaml
recordings/output/: compress.sh  play_compressed.sh  play_kobuki.sh  pozn.txt  time_offsets
recordings/real_lidar_wheel_odom/: metadata.yaml  real_lidar_wheel_odom_0.mcap
recordings/rosbag2_2025_10_28-08_55_14/: rosbag2_2025_10_28-08_55_14_0.mcap
recordings/test_koliecko/: metadata.yaml
rosbag2_2025_10_28-08_55_14/: metadata.yaml
rosbag2_2025_10_30-11_54_29/: metadata.yaml
rviz/: benchmark2.rviz  csm_bp.rviz  csm_fusion_benchmark.rviz  default.rviz  default_bp.rviz  genz_wheel_ekf_fusion_benchmark.rviz  genz_wheel_ekf_fusion_bp.rviz  kinematic_icp.rviz  kobuki.rviz  kobuki_csm.rviz  kobuki_csm_optitrack.rviz  kobuki_genz_ekf_optitrack.rviz  kobuki_kin.rviz  kobuki_kin_optitrack.rviz
src/alert_msgs/: CMakeLists.txt  package.xml
src/alert_msgs/msg/: RobotAlert.msg
src/amrapi_msgs/: CMakeLists.txt  package.xml
src/amrapi_msgs/msg/: ApiHistoryMsg.msg  AtSegmentMsg.msg  AtStationTelemetryMsg.msg  BatteryMsg.msg  BlockedMsg.msg  DetectedAmrNames.msg  ImageFrameMsg.msg  LiftAddon1_3Msg.msg  LiftAddonDrawerMsg.msg  MicroAdjustmentMsg.msg  MotorMsg.msg  MotorsMsg.msg  PathMsg.msg  PathSyncPointMsg.msg  RestrictionSetMsg.msg  ResultMsg.msg  RobotAlertSummaryMsg.msg  RobotModelMsg.msg  RobotStateMsg.msg  SafetyMsg.msg  SecondaryMotorBlockingSourcesMsg.msg  TachometerMsg.msg  TrajectoryMsg.msg  VehicleVelocityMsg.msg  WaypointMsg.msg  ZoneMsg.msg
src/chatter_subscriber/: package.xml  setup.cfg  setup.py
src/chatter_subscriber/chatter_subscriber/: subscriber.py
src/ekf_fusion_pkg/: package.xml  setup.cfg  setup.py
src/ekf_fusion_pkg/ekf_fusion_pkg/: ekf_node.py
src/genz-icp/cpp/genz_icp/core/: VoxelHashMap.cpp  VoxelHashMap.hpp
src/genz-icp/cpp/genz_icp/pipeline/: GenZICP.hpp
src/genz-icp/ros/: CMakeLists.txt
src/genz-icp/ros/launch/: odometry.launch.py
src/genz-icp/ros/ros2/: OdometryServer.cpp  OdometryServer.hpp
src/hw_layer_msgs/: CMakeLists.txt  package.xml
src/hw_layer_msgs/msg/: AddonRotationMsg.msg  AddonStateMsg.msg  AllFlippersMsg.msg  AllShiftsMsg.msg  AllTofsMsg.msg  BatteryMsg.msg  CommandMsg.msg  ComponentStateMsg.msg  FlipperMsg.msg  IMUMsg.msg  LiftAddonDrawerBriefInfoMsg.msg  LiftAddonInfoMsg.msg  LiftAddonLiftAxisBriefInfoMsg.msg  LiftMsg.msg  MotorsVelocityMsg.msg  ShiftMsg.msg  TofMsg.msg  VelocitiesComparisonMsg.msg  WheelsMsg.msg
src/icp_localization_ros2/: CMakeLists.txt  package.xml
src/icp_localization_ros2/config/: node_params.yaml
src/kalman_filters/include/: system_model.hpp  system_simulator.hpp
src/kalman_filters/src/: system_model.cpp
src/kinematic-icp/ros/config/: kinematic_icp_ros.yaml
src/kinematic-icp/ros/launch/: common_args.launch.py  online_node.launch.py
src/robot_control_cpp/: CMakeLists.txt  package.xml
src/robot_control_cpp/include/robot_control_cpp/: kalman_filter.hpp
src/robot_control_cpp/src/: ekf_path.cpp  fusion.cpp  fusion_git_ekf.cpp  imu_publisher.cpp  kalman_filter.cpp  odom_to_path.cpp  pid_control.cpp  rosbag_republisher.cpp  scan_printing.cpp  scan_republisher.cpp  scan_to_pc.cpp  teleop.cpp  tf_publisher.cpp  wheel_odom_publisher.cpp
src/robot_control_cpp/src/bp/: groundtruth_republisher.cpp  gt_wrapper.cpp  imu_publisher.cpp  odom_republisher.cpp  scan_republisher.cpp  tree_publisher.cpp  wheel_odom_path.cpp  wheel_odom_publisher.cpp
src/robot_control_cpp/src/kobuki/: pid_control.cpp  teleop.cpp
src/robot_localization/: CMakeLists.txt
src/robot_localization/launch/: ekf.launch.py
src/robot_localization/params/: ekf.yaml  ekf_bag.yaml  ekf_kin.yaml  ekf_kobuki.yaml
src/robot_localization/src/: ros_filter.cpp
src/ros2_laser_scan_matcher/: CMakeLists.txt
src/ros2_laser_scan_matcher/include/ros2_laser_scan_matcher/: laser_scan_matcher.h
src/ros2_laser_scan_matcher/src/: laser_scan_matcher.cpp
src/uds_kobuki_ros/: README.md  package.xml  setup.py
src/uds_kobuki_ros/deploy/: run.bat  run.sh
src/uds_kobuki_ros/uds_kobuki_ros/: defines.py  kobuki.py  kobuki_depr.py  mobile_robot.py  uds_kobuki_ros.py
start_scripts/: benchmark_bag.sh  benchmark_bag_csm.sh  benchmark_bag_ekf.sh  benchmark_bag_kin.sh  bp_benchmark_bag.sh  bp_benchmark_bag_depr.sh  bp_start_bag.sh  gt_viz.sh  kobuki_csm.sh  kobuki_ekf.sh  kobuki_kin.sh  optitrack_kobuki.sh  optitrack_record.sh  play_bag.sh  play_compressed.sh  record_gt.sh  run_kinematic_icp.sh  run_trajectory_eval.py  run_trajectory_eval.sh  sandbox.sh  setup_venv.sh  sim.sh  start.sh  start_kobuki.sh  start_kobuki_ekf.sh  start_kobuki_kin.sh
(+7 files in other folders)
